Fixed vertical marker list being too tall with many markers

--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
 .transport .screen {
@@ -40,6 +40,16 @@
     color: #baddde;
 }
 
+.markerList {
+    overflow-y: scroll;
+    padding-right: 10px;
+}
+/*
+.markerList::-webkit-scrollbar {
+  display: none;
+}
+*/
+
 .markerList ul {
     display: flex;
     flex-direction: column;
@@ -50,11 +60,6 @@
     padding-bottom: 10px;
 
     background: linear-gradient(90deg, #111 0%, #111 9%, #ddd 9%, #ddd 11%, #111 11%, #111 100%);
-    overflow-y: scroll;
-}
-
-.markerList ul::-webkit-scrollbar {
-  display: none;
 }
 
 .markerList li {
